<resources>
    <string name="app_name">J Flash card</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>

    <string name="lesson_name">%1$d</string>
    <string name="kanji_lesson_name">%1$s</string>
    <string name="lesson_name_full">lesson %1$d</string>
    <string name="kanji_lesson_name_full">lesson %1$s</string>
    <string name="kana">Kana</string>
    <string name="kanji">Kanji</string>
    <string name="meaning">Mean</string>
    <string name="reading">Reading</string>
    <string name="listen">Listen</string>
    <string name="no_kanji">&lt;= NO KANJI =&gt;</string>
    <string name="new_word">Từ mới</string>
    <string name="study_mode">Study mode</string>
    <string name="session_item">session %d</string>
    <string name="group_item">group %s</string>
    <string name="dl_number_in_session">Số từ mới được chia ra những nhóm nhỏ (session) để dễ học và nhớ hơn. Bạn có thể chọn một hoặc nhiều nhóm để ôn luyện. trong 1 nhóm có lượng từ mới là : %d</string>
    <string name="dl_number_in_group">Lượng kanji là khá nhiều nên được chia ra thành những nhóm lớn (group). Mỗi nhóm lớn lại có thể chia thành những nhóm nhỏ.</string>
    <string name="number_left">Số từ mới còn lại của lượt này : %d</string>
    <string name="random">Random</string>
    <string name="let_s_learn_japanese">Let\'s learn japanese</string>
    <string name="kanji_learn">Kanji Learn</string>
    <string name="which_one">Chọn Mục ưu tiên</string>
    <string name="which_one_des">bạn muốn ưu tiên cái gì được hiện ra trước ? (lưu ý là kanji có thể không hiện được)</string>
    <string name="menu_title">Cùng học tiếng Nhật</string>
    <string name="ad_unit_banner_1">ca-app-pub-7034676815737306/2073384527</string>
    <string name="ad_app_id">ca-app-pub-7034676815737306~2129224846</string>
    <string name="check_all">check all</string>
    <string name="uncheck_all">uncheck all</string>
    <string name="session_dialog_title">Chọn session</string>
    <string name="group_dialog_title">Chọn group</string>
    <string name="romaji">romaji</string>
</resources>
