<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/background">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:textSize="20sp"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:textStyle="bold"
        android:textColor="@color/menu_text_color"
        android:background="@color/base_background"
        android:text="@string/which_one"/>

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:padding="10dp"
        android:layout_below="@id/title"
        android:textColor="@android:color/black"
        android:text="@string/which_one_des"/>

    <LinearLayout
        android:id="@+id/bottom_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            style="@style/buttonStyle"
            android:id="@+id/dl_btn_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="OK"/>

        <Button
            style="@style/buttonStyle"
            android:id="@+id/dl_btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="1dp"
            android:textAllCaps="true"
            android:text="cancel"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/description"
        android:layout_above="@id/bottom_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioGroup
                android:id="@+id/group_priority"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/radio_kana"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:paddingLeft="10dp"
                    android:text="@string/kana"/>
                <RadioButton
                    android:id="@+id/radio_kanji"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:paddingLeft="10dp"
                    android:text="@string/kanji"/>
                <RadioButton
                    android:id="@+id/radio_meaning"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:paddingLeft="10dp"
                    android:text="@string/meaning"/>
                <RadioButton
                    android:id="@+id/radio_reading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:paddingLeft="10dp"
                    android:text="@string/reading"/>
                <RadioButton
                    android:id="@+id/radio_random"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:paddingLeft="10dp"
                    android:text="@string/random"/>
            </RadioGroup>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>